# timrcv

./: .gitignore  Cargo.toml  README.md  list_test.txt
.github/: rust_release.yml
.github/workflows/: ci.yml  release.yml  rust_ci.yml  rust_release.yml
ranked_voting/: Cargo.toml
ranked_voting/src/: builder.rs  config.rs  lib.rs  manual.rs  quick_start.rs
src/: args.rs  main.rs  rcv.rs
src/rcv/: config_reader.rs  io_cdf.rs  io_common.rs  io_csv.rs  io_dominion.rs  io_ess.rs  io_msforms.rs
tests/: .~lock.msforms_data.xlsx#  msforms_data.xlsx
tests/csv_simple_1/: csv_simple_1_config.json  csv_simple_1_expected_summary.json  example.csv
tests/csv_simple_2/: csv_simple_2_config.json  example.csv
tests/csv_simple_likert/: csv_simple_likert_config.json  csv_simple_likert_expected_summary.json  example.csv
tests/msforms_1/: msforms_1_config.json  msforms_1_expected_summary.json
tests/msforms_likert/: msforms_likert_config.json  msforms_likert_expected_summary.json
tests/msforms_likert_transpose/: msforms_likert_transpose_config.json  msforms_likert_transpose_expected_summary.json
