[package]
name = "ranked-voting"
version = "0.2.0"
edition = "2021"
# author = ["Tim Hunter <tjhunter@cs.stanford.edu>"]

readme = "README.md"
repository = "https://github.com/tjhunter/timrcv"
description = "Tabulating program and library for all common voting format."
categories = ["science"]
keywords = ["irv", "tally", "election", "voting", "vote", "ballot"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "timrcv"
path = "src/main.rs"

[dependencies]
ranked_voting = { path = "ranked_voting" }
log = "0.4"
env_logger = "0.9"
calamine = "0.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-diff = "0.4"
clap = { version = "3.2.20", features = ["derive"] }
snafu = "0.7"
csv = "1.1"

# dev
# datatest = "0.7.1" #would be nice but is not in rust stable yet